--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ic_parent_api.code-workspace
 src/ic_parent_api/__pycache__/
 src/ic_parent_api/errors/__pycache__/
 src/ic_parent_api/models/__pycache__/
+.tox/
