--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,6 @@ deps = flake8
 
 commands = flake8 src/ --max-line-length 110 --ignore F401
 
-[testenv:type]
+[testenv: mypy]
 deps = mypy
-commands = mypy src/
+commands = mypy --install-types --non-interactive src/
