--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ install_command = python -m pip install --use-deprecated legacy-resolver {opts} 
 [testenv:pylint]
 ignore_errors = True
 deps =
-     -r{toxinidir}/requirements.txt
+     -r{toxinidir}/requirements-dev.txt
 commands =
      pylint -d all ic_parent_api
 
